tests/ui/derive/fail_api_schema_duplicate_enum_variant_name.rs
use serde::Serialize;

#[derive(Serialize, ts_rs::TS, foundry::ApiSchema)]
#[serde(rename_all = "snake_case")]
enum DuplicateEnumVariantApiSchema {
    PendingReview,
    #[serde(rename = "pending_review")]
    Pending,
}

fn main() {}
